@@ -4,12 +4,10 @@ ideas for future versions:
       do not redraw 3 times when changing 3 attributes simultaneously. (especially at undo/redo)
   [ ] a "saveAs" or export-as-cfu1 command should allow to copy the current db
   [ ] next to the about button, a help button is needed that can provide context-sensitive information.
-  [ ] when opening the second database, the root diagram cannot be focused immediately
-  [ ] when opening the second database, switch back to nav view
   [ ] show a progress bar while exporting diagrams (especially for png mode)
   [ ] update search result view when changing the database (e.g. by undo)
-  [ ] when selecting a search result, not only jump to the diagram but also focus on the result
   [ ] the list of search results partly disappers when database update is triggered by a 2nd window
+  [ ] when selecting a search result, not only jump to the diagram but also focus on the result
   @gui+ctrl
   [ ] When undoing/redoing things, switch to a diagram where you see the changes
   [ ] When pasting a new diagram, switch to the new diagram in nav view to see the changes
